# siteship-workflows

./: .bumpversion.cfg  .gitignore  Dockerfile  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: deploy.yml  docker-build.yml
dags/: display_dag_id_pipeline.py  supabase_to_vercel_pipeline.py
dags/pipelines/: notify.py  tasks.py
elestio/: docker-compose.yml  elestio-docker-compose.yml  remider.txt  servers.json
pipelines/: tasks.py
plugins/: serialized_dag_fix.py
siteship-wf/: Dockerfile  requirements.txt
siteship-wf/.astro/: config.yaml
siteship-wf/dags/: supabase_to_vercel_pipeline.py
src/siteship_workflows/: dags.py
