[tool.poetry]
name = "siteship-workflows"
version = "0.1.0"
description = ""
authors = ["samrat <samratshakya5@gmail.com>"]
packages = []
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.4"
PyGithub = "^2.6.1"
python-dotenv = "^1.0.1"
apache-airflow = {version = "3.1.1", extras = ["sqlite"]}
apache-airflow-providers-fab = "^2.3.0"
twilio = "^9.6.5"
celery = "^5.4.0"
redis = "^5.0.0"
psycopg2-binary = "^2.9.9"
apache-airflow-providers-github = "^2.9.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
